test/libsolidity/syntaxTests/parsing/import_invalid_token.sol
import function;
// ----
// ParserError 9478: (7-15='function'): Expected string literal (path), "*" or alias list.
